tests/amdgpu/check/illegal_async_dma.co
// RUN: not choreo -es -t hip -arch=gfx1030 %s 2>&1 | FileCheck %s

__co__ auto test_async(s32 [64] input) {
  s32[input.span] output;

  parallel by 1, by 64 {
    f = dma.copy.async input => shared;
    wait f;
    dma.copy f.data => output;
  }
  return output;
}

// CHECK: error: async DMA is not supported on HIP target
